=================
=  CHANGE LOG   =
=================

J2SSH Maverick 1.5.3 - Jan 27, 2016

Features
	o Update examples to use threaded-mode clients to prevent confusion for new users expecting event type behavior from default single threaded mode.
	o Deprecated CBC and ArcFour ciphers.
	
=================
=  HISTORY      =
=================

J2SSH Maverick 1.5.2 - Aug 15, 2015

Features
	o Added SimpleLogger implementation.
    o Added Dynamic Port Forwarding.
	o Prepared pom.xml for maven central via Nexus.
	
-----------------

J2SSH Maverick 1.5.1 - Jan 2, 2015

Bug Fixes
	o Removed references to com.maverick namespace which caused some startup issues.
	o Context and ComponentManager are now initialised correctly.
	o Added missing and default NoLogger implementation to prevent startup errors caused by no logging implementation being present.
	
-----------------

J2SSH Maverick 1.5.0 - Aug 28, 2014

Features
    o New open source branch converted to maven.
    o Converted source to 1.5 source compatibility. 
    o Renamed all base packages to com.sshtools.
    o Re-factored logging interface, removed used of event service and replaced with custom interface.
    
Bug Fixes
	o Automatically attempt to add BouncyCastle JCE provider if found in class path. If not installed, there may no large prime support for some Diffie Hellman algorithms.
	o Evaluated and removed all java warnings through either re-factor or suppression.
	
-----------------

J2SSH Maverick 1.4.53 - Aug 19, 2014

Bug Fixes
    o HTTP / SOCKS proxy classes missing connection timeout support.
    o Added synchronization to license validation to prevent possible corruption of license information under load.
    o Ssh2Channel sendRequest incorrectly synchronizes on connection instance rather than channel instance.
    
------------------
    
J2SSH Maverick 1.4.52 - Jun 11, 2014

Bug Fixes