@@ -1,2 +1,4 @@
 /target
 /.settings/
+/.metadata/
+/RemoteSystemsTempFiles/
